--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,12 @@
         <groupId>org.aspectj</groupId>
         <artifactId>aspectjtools</artifactId>
         <version>1.7.4</version>
-    </dependency>e
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>5.2.8.RELEASE</version>
+    </dependency>
 
     </dependencies>
 
